feat: Add new simple actor character sheet template
- Introduced a new simple character sheet template for actors, enhancing user experience with a clean layout and organized tabs for characteristics, features, inventory, and biography.
- Updated existing actor character sheet to improve navigation and structure, including better handling of characteristics and features.
- Refactored item templates for better organization and added new item sheets for art, competence, domain, and voie.
- Implemented a validation script for Handlebars templates to ensure template integrity and catch errors early in the development process.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CSS compiler for the MyriadSystem system",
   "scripts": {
     "build": "sass src/scss/myriad-system.scss css/myriad-system.css --style=expanded --no-source-map",
-    "watch": "sass src/scss/myriad-system.scss css/myriad-system.css --style=expanded --source-map --watch"
+    "watch": "sass src/scss/myriad-system.scss css/myriad-system.css --style=expanded --source-map --watch",
+    "validate": "node validate-templates.js"
   },
   "browserslist": [
     "last 3 versions"
@@ -13,6 +14,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "sass": "^1.53.0"
+    "handlebars": "^4.7.8",
+    "sass": "^1.89.2"
   }
 }
